Bug 388962 - Kaffeine; Program Guide missing "title" in epg; 2.0.13 vs 2.0.14 in rpmfusion
Summary: Kaffeine; Program Guide missing "title" in epg; 2.0.13 vs 2.0.14 in rpmfusion
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
: 394306 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-01-14 14:17 UTC by awf_ul
Modified: 2018-05-30 11:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
attachment-10937-0.html (2.18 KB, text/html)
2018-01-20 13:23 UTC, D Lung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description awf_ul 2018-01-14 14:17:40 UTC
Program guide missing "Title" in epg Television Program Guide; all stations, all shows

All other functions appear to work.

To reproduce: start Kaffeine, select Digital TV, tune to known station. Program Guide fills in.

2.0.13 - Program guide shows titles
2.0.14 - Program guide shows no titles, all other info present

Reinstall 2.0.13, titles reappear

System:

Up to date Fedora 27 x86_64   Linux 4.14.13-300.fc27.x86_64.

2.0.14 is from rpmfusion updates.

Using ATSC.

saa7134 0000:04:06.0: DVB: registering adapter 0 frontend 0 (Nextwave NXT200X VSB/QAM frontend)
... nxt200x: nxt2004_init: Firmware upload complete

Thank You.
Comment 1 D Lung 2018-01-19 23:11:16 UTC
I can confirm this bug with ATSC epg in Kaffeine version 2.0.14 using the mtron package from launchpad.net on Ubuntu 16.04.3 LTS and the Arch Linux package version 2.0.14-1 from the "Community" repository on a continuously updated Arch installation. 

The "Title" is missing in the epg Program Guide on all stations 
 
Procedure to replicate is the same as described by awf_ul but I have also noticed that the ability to record by selecting the item and clicking the "Record Show" button does not work. 

I have tried this with multiple tuners with the same effect on different stations in Los Angeles CA, Dallas TX, Boston MA and Hilo HI with the same results. I have also tested using config.dvb and sqlite.db files from working 2.0.13 installation and the titles appear until the guide is updated or becomes outdated. Starting with no config.dvb or sqlite.db file and a clean scan and no titles appear. 

Checking or unchecking the "Use ISO 8859-1 charset instead of ISO 6937" option has no effect, even after restarting Kaffeine after making the change. 

I'm able to test patches or manual edits on my Arch Linux system to help crush this bug. 

Thanks for looking into this! 

        ....Doug
Comment 2 Mauro Carvalho Chehab 2018-01-20 12:01:22 UTC
In order to check what's happening, I need a 60 seconds full MPEG-TS dump of a channel that it is known to have EPG info, but Kaffeine 2.0.14 is not showing. I'll use it with my RF generator in order to be able to reproduce the bug. Please send me some information about the recorded channel (just for me to better name the file in the case I would need to test it again in the future).

The best is to use dvbv5-zap application, with something like:

$ dvbv5-zap -c dvb_channel.conf 'channel' -r -P -o atsc_channel.ts

The size of the file is usually very big. So, you should likely store it on a Google drive (or similar). Feel free to send me a link in priv.

More details about dvbv5-zap:

   https://linuxtv.org/wiki/index.php/Dvbv5-zap

Please notice that I'll be traveling for the next couple of weeks. So, it may take a while for me to be able to use my RF generator.
Comment 3 D Lung 2018-01-20 13:23:40 UTC
Created attachment 110013 [details]
attachment-10937-0.html

Thanks Mauro!

I'm on my way to LA now and will grab a capture or two for you and put it
in a Google drive folder. I usually use TSReader for captures but have
dvbv5-zap and can use it.

         ...Doug


On Jan 20, 2018 2:01 AM, "Mauro Carvalho Chehab" <bugzilla_noreply@kde.org>
wrote:

https://bugs.kde.org/show_bug.cgi?id=388962

--- Comment #2 from Mauro Carvalho Chehab <mchehab+kde@kernel.org> ---
In order to check what's happening, I need a 60 seconds full MPEG-TS dump
of a
channel that it is known to have EPG info, but Kaffeine 2.0.14 is not
showing.
I'll use it with my RF generator in order to be able to reproduce the bug.
Please send me some information about the recorded channel (just for me to
better name the file in the case I would need to test it again in the
future).

The best is to use dvbv5-zap application, with something like:

$ dvbv5-zap -c dvb_channel.conf 'channel' -r -P -o atsc_channel.ts

The size of the file is usually very big. So, you should likely store it on
a
Google drive (or similar). Feel free to send me a link in priv.

More details about dvbv5-zap:

   https://linuxtv.org/wiki/index.php/Dvbv5-zap

Please notice that I'll be traveling for the next couple of weeks. So, it
may
take a while for me to be able to use my RF generator.

--
You are receiving this mail because:
You are on the CC list for the bug.
Comment 4 Mauro Carvalho Chehab 2018-02-20 14:03:30 UTC
Just added this patch to the development tree. It should fix the issue.
Please test.


    commit 4133a42d35e5580778e7f1f906ebf19d399e8531 
    Author: Mauro Carvalho Chehab <mchehab@s-opensource.com>
    Date:   Tue Feb 20 13:50:57 2018 +0000

    dvbepg: fix logic for ATSC EIT entries
    
    The logic that adds ATSC EIT entries to the program guide
    is wrong: it is not inserting a new entry to the
    epgEntry::langEntry. Without that, none will be ever shown
    at the program guide, nor the program titles would appear at
    the OSD.
    
    BUG: 388962
    
    Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>
Comment 5 Mauro Carvalho Chehab 2018-05-30 11:57:39 UTC
*** Bug 394306 has been marked as a duplicate of this bug. ***