dvbepg: fix logic for ATSC EIT entries

The logic that adds ATSC EIT entries to the program guide
is wrong: it is not inserting a new entry to the
epgEntry::langEntry. Without that, none will be ever shown
at the program guide, nor the program titles would appear at
the OSD.

BUG: 388962

Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>